# kvstore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  main.cpp
include/kv/: storage_engine.h
server/: CMakeLists.txt  main.cpp  protocol.cpp  protocol.h  tcp_server.cpp  tcp_server.h
src/: CMakeLists.txt  crc32.cpp  crc32.h  file_handle.cpp  file_handle.h  log_record.cpp  log_record.h  storage_engine.cpp
tests/: CMakeLists.txt  concurrency_test.cpp  crash_recovery_test.cpp  crc32_test.cpp  log_record_test.cpp  protocol_test.cpp  skeleton_test.cpp  storage_engine_test.cpp  tcp_server_test.cpp
